fix(Scrollbar): set width 0 for scrollbar from ZnUI for webkit

--- a/src/components/Providers/ThemeProvider/ThemeProvider.css
+++ b/src/components/Providers/ThemeProvider/ThemeProvider.css
@@ -432,7 +432,7 @@
  * For WebKit Specific
  */
 .ThemeProvider ::-webkit-scrollbar {
-    width: 3px;
+    width: 0px;
 }
 
 .ThemeProvider ::-webkit-scrollbar-track {
